add .config; move .vimrc, .zshrc, .tmux.conf

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -417,7 +417,7 @@ tmux_conf_update_plugins_on_reload=true
 
 ## Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 #run '~/.tmux/plugins/tpm/tpm'
-# remap prefix from 'C-b' to 'C-a'
+# remap prefix from 'C-b' to 'C-n'
 unbind C-b
 set-option -g prefix C-n
 bind-key C-n send-prefix
